# veen-news

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
.github/workflows/: daily-crawl.yml  recaps.yml
data/: index.json  pagination.json  sources.yaml
data/daily/: 2026-06-18.json  2026-06-19.json  2026-06-20.json  2026-06-21.json  2026-06-22.json  2026-06-23.json  2026-06-24.json  2026-06-25.json  2026-06-26.json  2026-06-27.json  2026-06-28.json  2026-06-29.json  2026-06-30.json  2026-07-01.json  2026-07-02.json  2026-07-03.json  2026-07-04.json  2026-07-05.json  2026-07-06.json  2026-07-07.json  2026-07-08.json  2026-07-09.json  2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-18.json  2026-07-19.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
data/monthly/: 2026-07.json
data/weekly/: 2026-25.json  2026-26.json  2026-27.json  2026-28.json  2026-29.json
docs/architecture/: README.md  consuming-the-api.md  data-model.md  github-actions-workflow.md  roadmap.md  tech-stack.md
docs/architecture/adr/: ADR-001-git-as-database.md  ADR-002-github-actions-compute.md  ADR-003-ai-gateway.md  ADR-004-static-frontend.md  ADR-005-source-config.md  (+2 more)
frontend/: .env.example  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
src/veen/: ai_pipeline.py  config.py  crawl.py  export.py  models.py  pipeline.py  pipeline_openrouter.py  recaps.py
tests/: test_pipeline_openrouter.py
(+10 files in other folders)
