[project]
name = "veen"
version = "0.1.0"
description = "Personal zero-cost AI news aggregator"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "openai>=1.50",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
]

[project.scripts]
veen = "veen.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/veen"]
